# EasyNetBSD

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
AutoNBSD/: CMakeLists.txt  DiskTools.c  DiskTools.h  MainGUI.c  ru.po
